  * convert packaging to Multi-Arch, bump compat level to 9 and debhelper
    build-dependency accordingly; all binaries are Multi-Arch=foreign.
  * update debian/copyright for wpa 1.0~rc2 and merged sources.
  * fix clean target and make sure to succeed building twice in a row.
  * drop build-dependency on libreadline-dev, it's no longer needed with
    WPA_CLI_EDIT.

  [ Kel Modderman ]
  * export BINDIR=/sbin, the build system now requires it when patching
    D-Bus/systemd configuration.
  * quieten the upstream build system so that errors/warning are more visible.
  * assist with adaptation of debian/rules for merge of wpa_supplicant/hostapd:
    - add docbook-utils to build dependency list and make documentation from
      sgml source
    - ensure shared code under src/ is cleaned between wpa_supplicant/hostapd
      builds
    - put wpa_supplicant/hostapd ifupdown hooks in their own namespace, adapt
      installation of ifupdown hooks
  * drop the netdev_wrapper script from wpagui and associated patch
  * install systemd service unit file
  * refresh D-Bus service activation file patch which starts process with
    syslog and control socket support, also patch systemd service file
  * drop 09_dbus_emit_change_events.patch, applied upstream.
  * fix ftbfs with gcc/g++ 4.7 (Closes: 667416)
  * unfortunately, hostapd package historically added an epoch, so an epoch
    must now be added to this source package too.
  * enable hardened build flags. (Closes: #657332)
  * remove DEB_BUILD_OPTIONS=noopt handling from debian/rules, no longer
    required since dpkg-buildflags honors it.
  * Add ability to set CC for cross building support (untested).
  * Remove Faidon Liambotis <paravoid@debian.org> from Uploaders as per
    his request, many thanks for all past efforts Faidon.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 14 Apr 2012 23:52:41 +0200

wpasupplicant (0.7.3-6) unstable; urgency=low

  * add "hostap: Allow linking with libnl-3" from Ben Greear 