@@ -1,2 +1,0 @@
-version=3
-http://w1.fi/releases/wpa_supplicant-(0\.7\.\d+)\.tar\.gz
